syntax = "proto3";

option go_package = "grpc.logPassword";

message LogPasswordEntry {
  string id = 1;
  string login_hash = 2;
  string password_hash = 3;
  string resource_name = 4;
  string entry_hash = 5;
}

message ExistingLogPasswordHash {
  string id = 1;
  string entry_hash = 2;
}

message ListLogPasswordRequest {
  repeated ExistingLogPasswordHash existing_hashes = 1;
}

message ListLogPasswordResponse {
  string error = 1;
  repeated LogPasswordEntry log_passwords = 2;
}

message CreateLogPasswordRequest {
  string login_hash = 1;
  string password_hash = 2;
  string resource_name = 3;
}

message CreateLogPasswordResponse {
  string error = 1;
  string id = 2;
}

message UpdateLogPasswordRequest {
  string id = 1;
  string login_hash = 2;
  string password_hash = 3;
  string resource_name = 4;
  string previous_hash = 5;
  bool is_deleted = 6;
  bool force_update = 7;
}

message UpdateLogPasswordResponse {
  string error = 1;
}

service LogPassword {
  rpc ListLogPassword(ListLogPasswordRequest) returns (ListLogPasswordResponse);
  rpc CreateLogPassword(CreateLogPasswordRequest) returns (CreateLogPasswordResponse);
  rpc UpdateLogPassword(UpdateLogPasswordRequest) returns (UpdateLogPasswordResponse);
}